--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
  
 </script>
 
-<!-- <div class="nav">
+ <div class="nav">
     <div class="logo"><h2>Fluencify</h2></div>
     <div class="list">
  <ul>
@@ -168,7 +168,7 @@
  </ul>
 
     </div>
-</div> -->
+</div> 
 
     <!-- <script>
         let b = "hello abhishke";
