--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
      #calculator{
           margin: 3rem;
         height: fit-content;
-        background-color:rgb(47, 217, 255);
+        background-color:black;
         display: inline-grid;
         padding: 15px;
         border-radius: 5px;
