--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </head>
 <body>
     
- <div class="nav">
+ <!-- <div class="nav">
     <div class="logo"><h2>Fluencify</h2></div>
     <div class="list">
  <ul>
@@ -126,7 +126,7 @@
  </ul>
 
     </div>
-</div> 
+</div>  -->
 <center>
 <button class="green"  onclick="cartitems=cartitems+1;document.querySelector('.bag').innerHTML=`your cart has  ${cartitems}    items`;">Add to Bag</button>
 <button class="wishlist" onclick="cartitems=cartitems-1;document.querySelector('.bag').innerHTML=`your cart has  ${cartitems}    items`;">Move to wishlist</button>
